--- a/index1.html
+++ b/index1.html
@@ -14,5 +14,33 @@
 		<li>three</li>
 	</ul>
 
+<form>
+		<input type="text" placeholder="username" value="kamal cs"><br>
+		<input type="password" placeholder="password"><br>
+		<input type="email" placeholder="Enter email"><br>
+		<input type="radio" name="gender" value="male">:male 
+		<input type="radio" name="gender" value="female">:female 
+		<input type="radio" name="gender" value="others">:others<br>
+		<input type="checkbox" value="football"> i love to play football<br>
+		<select>
+			<option>Choose a game</option>
+			<option value="a">football</option>
+			<option value="b">cricket</option>
+			<option value="c">hockey</option>
+			<option value="d">basketball</option>
+		</select><br>
+		<input type="submit" value="Submit the form">
+		<button>A Button</button><br>
+		<input list="games">
+		<datalist id="games">
+			<option>Choose a game</option>
+			<option value="a">football</option>
+			<option value="b">cricket</option>
+			<option value="c">hockey</option>
+			<option value="d">basketball</option>
+		</datalist><br>
+		<input type="number"><br>
+		<input type="date">
+	</form>
 </body>
 </html>
